Configure sync for channels with matching labels