@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016 SUSE LLC
+ * Copyright (c) 2016--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 package com.suse.utils.test;
 
@@ -21,60 +17,73 @@ import com.suse.utils.Lists;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class ListsTest  {
 
     @Test
    public void testEmpty() {
-       assertTrue(Lists.combinations(Collections.emptyList()).isEmpty());
+       assertTrue(Lists.combinations(List.of()).isEmpty());
    }
 
     @Test
    public void testCombinations() {
       assertTrue(
-          Lists.combinations(Arrays.asList(
-                  Arrays.asList(1, 2),
-                  Collections.emptyList(),
-                  Arrays.asList(5, 6)
+          Lists.combinations(List.of(
+                  List.of(1, 2),
+                  List.of(),
+                  List.of(5, 6)
           )).isEmpty()
       );
       assertTrue(
-          Lists.combinations(Arrays.asList(
-                  Collections.emptyList(),
-                  Arrays.asList(1, 2),
-                  Arrays.asList(5, 6)
+          Lists.combinations(List.of(
+                  List.of(),
+                  List.of(1, 2),
+                  List.of(5, 6)
           )).isEmpty()
       );
       assertTrue(
-          Lists.combinations(Arrays.asList(
-                  Arrays.asList(1, 2),
-                  Arrays.asList(5, 6),
-                  Collections.emptyList()
+          Lists.combinations(List.of(
+                  List.of(1, 2),
+                  List.of(5, 6),
+                  List.of()
           )).isEmpty()
       );
    }
 
     @Test
    public void testCombination() {
-       List<List<Integer>> combinations = Lists.combinations(Arrays.asList(
-               Arrays.asList(1, 2),
-               Arrays.asList(3, 4),
-               Arrays.asList(5, 6)
+       List<List<Integer>> combinations = Lists.combinations(List.of(
+               List.of(1, 2),
+               List.of(3, 4),
+               List.of(5, 6)
        ));
 
-       List<List<Integer>> lists = Arrays.asList(
-               Arrays.asList(1, 3, 5),
-               Arrays.asList(1, 3, 6),
-               Arrays.asList(1, 4, 5),
-               Arrays.asList(1, 4, 6),
-               Arrays.asList(2, 3, 5),
-               Arrays.asList(2, 3, 6),
-               Arrays.asList(2, 4, 5),
-               Arrays.asList(2, 4, 6)
+       List<List<Integer>> lists = List.of(
+               List.of(1, 3, 5),
+               List.of(1, 3, 6),
+               List.of(1, 4, 5),
+               List.of(1, 4, 6),
+               List.of(2, 3, 5),
+               List.of(2, 3, 6),
+               List.of(2, 4, 5),
+               List.of(2, 4, 6)
        );
        assertEquals(lists, combinations);
    }
+
+    @Test
+    public void testUnion() {
+        List<Integer> result = Lists.union(List.of(1, 2, 3), List.of(3, 4, 5));
+        assertEquals(List.of(1, 2, 3, 3, 4, 5), result);
+    }
+
+    @Test
+    public void testNullSafetyUnion() {
+        List<Integer> result = Lists.union(null, List.of(3, 4, 5));
+        assertEquals(List.of(3, 4, 5), result);
+
+        result = Lists.union(List.of(1, 2, 3), null);
+        assertEquals(List.of(1, 2, 3), result);
+    }
 }
